﻿Change Log
==========

1.0.3
-----

Added

Changed
- Bug Fixes
 - Fix a bug in how Sesame connections load the default graph
 - Fix a bug causing incorrect results in some cases of { } OPTIONAL { } when the LHS and RHS are disjoint i.e. no
   common variables (CORE-386)
- Query
 - SparqlResultSet can now be created from an IEnumerable<SparqlResult> instances (CORE-383)

Removed

1.0.2
-----

Added

Changed
- Bug Fixes
 - Possible OOM when stream parsing large RDF/XML files (CORE-378)
 - Fix a bug with transactions being left open in some cases when using VirtuosoManager (VIRT-382)
- NuGet
 - Fixed packaging to ensure the Portable Class Library builds are included

Removed
- Marked as obsolete unusable the obsoleted ICharFormatter.FormatChar() method

1.0.1
-----

Added
- Portable Class Library builds are now included (CORE-303)
 - Note that synchronous APIs for some functionality are not supported in the PCL builds (CORE-371)
- Formatting API
 - Add new more efficient FormatChar() overload to ICharFormatter (CORE-357)
- Query
 - First version of new Fluent Query builder API (CORE-260)
- Global Options
 - Add new DefaultCulture and DefaultComparisonOptions used for lexical ordering of literal values in the cases
   where more natural ordering (e.g. numeric) does not apply (CORE-367)

Changed
- Bug Fixes
 - Fix a bug where SPARQL parsing could incorrectly lose type information for some literals used in expressions
 - Fix a Stack Overflow that could occur in ThreadSafeGraph (CORE-363)
 - Property Path * operator could produce incorrect results (CORE-349)
 - Correct an error message re: extension point in Full Text Indexing (FTXT-366)
 - Some full text queries could cause BIND clauses to result in unbound values (FTXT-364)
 - Fixes to handling of some Date Time comparisons in SPARQL (CORE-365)
 - Fixes to asynchronous error propagation for some async APIs (CORE-370)
 - Fixes to parsing of EXISTS/NOT EXISTS within the WHERE clause of a SPARQL Update (CORE-373)