@@ -11,6 +11,8 @@ Changed
  - Fix a bug in how Sesame connections load the default graph
  - Fix a bug causing incorrect results in some cases of { } OPTIONAL { } when the LHS and RHS are disjoint i.e. no
    common variables (CORE-386)
+- Documentation
+ - Minor tweak to Timeout properties to ensure all explicitly state that the unit is milliseconds (CORE-387)
 - Query
  - SparqlResultSet can now be created from an IEnumerable<SparqlResult> instances (CORE-383)
 
